paths to files changed in 22280

--- a/22280.ipynb
+++ b/22280.ipynb
@@ -25,9 +25,9 @@
    "source": [
     "# Load source file and data\n",
     "from source import *\n",
-    "a324154 = load_outs('22280/324154_f_combined.outs')\n",
-    "a459310 = load_outs('22280/459310_f_combined.outs')\n",
-    "a2007BJ41 = load_outs('22280/2007BJ41_f_combined.outs')\n",
+    "a324154 = load_outs('324154_f_combined.outs')\n",
+    "a459310 = load_outs('459310_f_combined.outs')\n",
+    "a2007BJ41 = load_outs('2007BJ41_f_combined.outs')\n",
     "data = [a324154, a459310, a2007BJ41]"
    ]
   },
